# rusty-keys

./: LICENSE  README.md
firmware/: Cargo.toml  README.md
firmware/hello/: Cargo.toml
firmware/hello/.cargo/: config.toml
firmware/hello/src/: main.rs
firmware/keyboard/: Cargo.toml
pcb/: .gitignore  README.md  rusty_keys.kicad_pcb  rusty_keys.kicad_pro  rusty_keys.kicad_sch
