[package]
authors = ["Hidekazu Kobayashi <kobahide789@gmail.com>"]
name = "rusty-keys"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
defmt = "0.3.1"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rp-pico = "0.3.0"

usb-device = "0.2.8"
usbd-hid = "0.6"
embedded-hal = "0.2.7"
embedded-time = "0.12"

heapless = "0.7"

[profile.release]
debug = 2
